<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <TextView
        android:id="@+id/recipeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin" />

    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/recipe_image_description"
        app:layout_constraintTop_toBottomOf="@id/recipeTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin" />

    <TextView
        android:id="@+id/selectedIngredientsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selected_ingredients_title"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/recipeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin" />

    <TextView
        android:id="@+id/recipeStepsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_steps"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/selectedIngredientsTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin" />
</androidx.constraintlayout.widget.ConstraintLayout>
