<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/ingredientGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="5"
        app:layout_constraintBottom_toTopOf="@id/proceedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Célula 1: Açúcar -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_sugar"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/sugar_label"
                android:src="@drawable/acucar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sugar_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 2: Chocolate -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_chocolate"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/chocolate_label"
                android:src="@drawable/chocolate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/chocolate_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 3: Farinha -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_flour"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/flour_label"
                android:src="@drawable/farinha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/flour_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 4: Leite -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_milk"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/milk_label"
                android:src="@drawable/leite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/milk_label"
                android:background="@color/teal_200" />
        </LinearLayout>

        <!-- Célula 5: Manteiga -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_butter"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/butter_label"
                android:src="@drawable/manteiga" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/butter_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 6: Morcego -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_bat"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/bat_label"
                android:src="@drawable/morcego" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/bat_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 7: Ovos -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_eggs"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/eggs_label"
                android:src="@drawable/ovos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/eggs_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 8: Pimenta -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_pepper"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/pepper_label"
                android:src="@drawable/pimenta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pepper_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 9: Sal -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_salt"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/salt_label"
                android:src="@drawable/sal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/salt_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

        <!-- Célula 10: Queijo -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_cheese"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cheese_label"
                android:src="@drawable/queijo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cheese_label"
                android:background="@color/teal_200"/>
        </LinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed_button"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

